# scaper-dev

./: Dockerfile  Dockerfile.api  Dockerfile.consumer  EXCEL_REPAIR_GUIDE.md  README.md  app_config.py  corrupt.xlsx  corrupt_repaired.xlsx  deploy.sh  docker-compose.yml  email_utils.py  excel_repair_utils.py  exceljs_bridge.py  main.py  pyproject.toml  reformat_excel.sh  repair_excel.py  requirements.txt  restart_instructions.txt  sample.xlsx  temp_requirements.txt  test_excel_repair.py  test_file_1083.py
.github/workflows/: build-deploy.yml
app/: api.py  common.py  config.py  db_utils.py  image_analyzer.py  main.py  rabbitmq_consumer.py  rabbitmq_producer.py  scraper_config.json  search_utils.py
app/icon_image_lib/: google_parser.py  search_page_parser.py
deploy/: docker-compose.yml  install.sh  reinstall.sh  super-scraper-consumer.service  super-scraper-update.service  super-scraper-update.timer  super-scraper.service  uninstall.sh
excel_bridge/: excel_operations.js  package.json
