[project]
name = "super-scraper"
version = "3.4.21"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Shared / consumer-only lightweight deps
    "aio-pika==9.5.5",
    "aiormq==6.8.1",
    "SQLAlchemy==2.0.39",
    "aioodbc==0.5.0",
    "pyodbc==5.2.0",
    "tenacity==9.1.2",
    "psutil>=5.9.0",
    "aiofiles==24.1.0",
    "chardet==5.2.0",
    "setuptools>=69.0.0",
    "requests==2.32.3",
]

[project.optional-dependencies]
api = [
    # API server
    "fastapi==0.115.11",
    "uvicorn==0.34.0",
    "gunicorn>=21.2.0",
    "waitress==3.0.2",
    # HTTP / networking
    "httpx==0.28.1",
    "requests==2.32.3",
    "aiohttp>=3.9.0",
    # Data
    "pandas==2.2.3",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "lxml==5.4.0",
    "beautifulsoup4==4.13.4",
    # Text / fuzzy matching
    "rapidfuzz==3.13.0",
    "fuzzywuzzy==0.18.0",
    "python-Levenshtein==0.27.1",
    "Unidecode==1.4.0",
    # AWS / Storage
    "boto3==1.36",
    "aiobotocore==2.18.0",
    # Email
    "aiosmtplib==4.0.1",
    # AI / Vision (heavy)
    "torch==2.6.0",
    "torchvision==0.21.0",
    "opencv-python==4.11.0.86",
    "ultralytics==8.3.135",
    "spacy==3.7.5",
    "google-generativeai==0.8.5",
    "ImageHash==4.3.2",
    "pycryptodome==3.23.0",
]
ml = [
    "transformers==4.49.0",
]
dev = [
    "pytest==8.3.2",
    "black==24.8.0",
]
